# xgimi_autotest

./: .gitignore  README.md  api_server.py  pyproject.toml  requirements.txt
API_Automation/: .env  Aes_crypt.py  api_testcase_runner.py  case_runner.py  debugtalk.py
API_Automation/httprunner/: api.py  cli.py  client.py  debug.py  parser.py  report.py  runner.py  utils.py  validator.py
API_Automation/reports/: 1585203021.html  1585209100.html
API_Automation/testsuites/: GMUI_Launhcer3.0_testsuite.yml
Shell_Automation/: BundleApk_Stability.sh  Launcher_Init_Stability.sh
UI_Automation/: .gitignore  demo_case.py  run.py
UI_Automation/base/: action.py  driver.py
UI_Automation/case/: demo_case.py
UI_Automation/config/: logging.yaml
UI_Automation/enums/: element_tool.py  keyevent.py
UI_Automation/exceptions/: CommonException.py
UI_Automation/pages/: BasePage.py  XgimiManagerPage.py  base_page.py  douban_fm_page.py  file_manager_page.py  xgimi_manager_page.py
UI_Automation/runner/: run.py  runner.py
UI_Automation/testcase/: test_douban_fm.py  test_file_manager.py  test_xgimi_manager.py
UI_Automation/tests/: conftest.py
UI_Automation/utils/: Logger.py  SerialPort.py  adb_tool.py  android_common.py  apk_tool.py  appium_server.py  device_tool.py  element_tool.py  file_tool.py  kill5037.bat  shell.py
api/GMUI_Launcher3.0/: child_filter_content.yml  child_filter_tags.yml  child_voice_search.yml  course_playAddress.yml  grade_list.yml  (+1 more)
httprunner/: __init__.py  api.py  cli.py
reports/: 1574129387.html
ui_automation/: .gitignore
(+156 files in other folders)
