[tool.poetry]
name = "xgimi_autotest"
version = "0.1.0"
description = "极米测试部软件自动化测试项目"
authors = ["ketao.li <ketao.li@xgimi.com>"]

[tool.poetry.dependencies]
python = "^3.7"
httprunner = "^2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
